--- a/pages/components/_user-profile-edit-artist.html
+++ b/pages/components/_user-profile-edit-artist.html
@@ -1,9 +1,10 @@
-                  
+                  {$profile = $scope.profile}
                     <form id="user_overview_form" class="ajax-submit autosave"  data-handler="save" data-toggle="validator">
-                      <input type="hidden" name="obj_type"value="user_profile" />
+                      <input type="hidden" name="obj_type" value="user_profile" />
                       <input type="hidden" name="id"  value="{$scope.profile.profile_id}" />
                       <input type="hidden" name="user_id" value="{$scope.profile.user_id}" />
                       <input type="hidden" name="site_id" value="{$site.id}" />
+                      <input type="hidden" name="description" value="{$scope.profile.description}" />
                                   
                     <div class="form-group form-group-icon-left">
                       <label>Solo Shows</label>
