Page Management on minisite

--- a/smarty/templates/components/_network-form-basic.html
+++ b/smarty/templates/components/_network-form-basic.html
@@ -72,7 +72,7 @@
                 <select name="timezone" id="timezone" data-value="{$profile.timezone}" 
                    class="form-control auto-select" autofocus="autofocus" autocorrect="off" autocomplete="off">
                   <option value="">Select a timezone...</option>
-                  {include file="/var/www/html/test.vpatina.com/smarty/templates/components/_timezones.html" }
+                    {{"include": "_timezones.html"}}
                 </select>
               </div>
 
