--- a/pages/components/_user-profile-edit-overview.html
+++ b/pages/components/_user-profile-edit-overview.html
@@ -7,6 +7,16 @@
                       <input type="hidden" name="user_id" value="{$scope.user.user_id}" />
                       <input type="hidden" name="site_id" value="{$site.id}" />
 
+                      <label>Logo Image</label>
+                      {"user_profile"|object_uploader:$profile.profile_id:"photo":["resize" => 1]}
+                      
+                      {* $scope.uploader *}
+
+                      <div class="form-group">
+                        <label>About Title</label>
+                        <input name="about_title" id="about_title" class="form-control" value="" type="text" style= "width:500px" /> 
+                      </div>
+
                       <div class="form-group">
                         <label>About</label>
                         <textarea name="description" class="summernote form-control" placeholder="Please describe yourself and your interests.">{$scope.profile.description}</textarea>
@@ -33,10 +43,7 @@
                       <div class="gap gap-small"></div>
                       
                     </form>
-                    <h4>Photo</h4>
-                    {"user_profile"|object_uploader:$profile.profile_id:"photo":["resize" => 1]}
                     
-                    {* $scope.uploader *}
 
                                    
                     <!--div id="map-canvas" style="width:100%; height:400px;"></div-->
